fixed some stuff with back of too long cards

--- a/financial-disclosures/main.css
+++ b/financial-disclosures/main.css
@@ -783,7 +783,7 @@ body {
         font-size: calc(4vw + 4vh + 2vmin);
     }
     .text_back.too_big {
-        font-size: 0.6em;
+        font-size: 0.8em;
         padding: 0px;
         line-height: 0.695;
     }
@@ -794,6 +794,12 @@ body {
         font-size: 0.8em;
         padding: 0px;
         line-height: 1.095;
+    }
+    .big_table {
+        line-height: 0.9px;
+    }
+    .okay_bigger {
+        line-height: 8px;
     }
     #augustine {
         background-image: url("images/raugustine2.jpg");
